<resources>

    <string name="app_name">Simple Shopping List</string>

    <!-- - - - - - - - - - - -->
    <!-- Used in UI          -->
    <!-- - - - - - - - - - - -->

    <!-- Add new item button -->
    <string name="add_new_item">Add new item</string>

    <!-- - - - - - - - - - - -->
    <!-- Messages            -->
    <!-- - - - - - - - - - - -->

    <!-- Message to show when no items added to the main list -->
    <string name="no_items_in_the_list">No items in the list</string>

    <!-- Message to show when no items added to the app -->
    <string name="no_items_added">No items found</string>

    <!-- Message to show when all items are already added to the list -->
    <string name="all_items_added">All recent items are in the list</string>

    <!-- Message to show when all items deleted -->
    <string name="main_list_cleared">List is cleared</string>

    <!-- Message to show when new item is saved successfully -->
    <string name="recent_item_saved_message">New item added</string>

    <!-- Message to show when item is updated successfully -->
    <string name="recent_item_updated_message">Item updated</string>

    <!-- Message to show when all items deleted -->
    <string name="recent_items_deleted">All items deleted</string>

    <!-- Message to show when item added with empty name -->
    <string name="recent_incorrect_name">Please, type something for the item name</string>

    <!-- Message to show when item added with the name of already existing item -->
    <string name="recent_item_already_exists">Item with this name already exist</string>

    <!-- - - - - - - - - - - -->
    <!-- Dialogs             -->
    <!-- - - - - - - - - - - -->

    <!-- Clear list alert dialog -->
    <string name="clear_list_dialog_title">Warning</string>
    <string name="clear_list_dialog_message">Do you want to clear the list?</string>
    <string name="clear_list_dialog_negative">Cancel</string>
    <string name="clear_list_dialog_positive">Clear</string>

    <!-- Delete all alert dialog -->
    <string name="delete_all_dialog_title">Warning</string>
    <string name="delete_all_dialog_message">Do you want to delete all items?</string>
    <string name="delete_all_dialog_negative">Cancel</string>
    <string name="delete_all_dialog_positive">Delete</string>

    <!-- Add item dialog -->
    <string name="additem_dialog_title">Add new item</string>
    <string name="additem_dialog_negative">Cancel</string>
    <string name="additem_dialog_positive">Add</string>
    <string name="additem_dialog_name_hint">Enter item name</string>
    <string name="additem_dialog_color_label">Choose item color:</string>
    <string name="additem_dialog_color_contDesc">Choose item color</string>
    <string name="edit_item_dialog_title">Edit item</string>
    <string name="edit_item_dialog_negative">Discard</string>
    <string name="edit_item_dialog_positive">Save changes</string>
    <string name="edit_item_dialog_name_hint">Enter new item name</string>
    <string name="edit_item_dialog_color_label">Choose new item color:</string>
    <string name="color_picker_dialog_title">Choose item color</string>
    <string name="color_pick_contDesc">Color to select</string>
    <string name="color_pick_check_contDesc">Color selected</string>

    <!-- - - - - - - - - - - -->
    <!-- Menus               -->
    <!-- - - - - - - - - - - -->

    <string name="menu_delete_all">Delete all</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_arrange_items">Arrange items</string>
    <string name="menu_night_mode">Night mode</string>
    <string name="menu_group_by_color">Group by color</string>
    <string name="menu_hide_checked">Hide checked items</string>
    <string name="menu_sort">Sort</string>
    <string name="menu_sort_by_name">By name</string>
    <string name="menu_sort_default">By adding</string>

</resources>
