<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/menu_sort_group"
            android:title="@string/menu_arrange_items"
            android:icon="@drawable/ic_sort"
            app:showAsAction="ifRoom">

        <menu>
            <item
                    android:id="@+id/menu_hide_checked"
                    android:title="@string/menu_hide_checked"
                    android:checkable="true"
                    app:showAsAction="never"/>

            <item android:title="@string/menu_sort">
                <menu>
                    <item
                            android:id="@+id/actionSortName"
                            android:title="@string/menu_sort_by_name"/>
                    <item
                            android:id="@+id/actionSortScore"
                            android:title="@string/menu_sort_default"/>
                </menu>
            </item>
        </menu>

    </item>
</menu>